--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.5'
 	id 'io.spring.dependency-management' version '1.1.0'
-	id 'org.asciidoctor.convert' version '2.2.1'
+	//id 'org.asciidoctor.convert' version '2.4.2'
 }
 
 group = 'de.ebcsoft'
@@ -17,6 +17,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url "https://plugins.gradle.org/m2/" }
 }
 
 ext {
@@ -37,6 +38,7 @@ dependencies {
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springframework.security:spring-security-web:5.6.0'
+	implementation 'org.mongodb:mongo-java-driver:3.12.10'
 }
 
 tasks.named('test') {
@@ -44,7 +46,7 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-	inputs.dir snippetsDir
-	dependsOn test
-}
+//tasks.named('asciidoctor') {
+//	inputs.dir snippetsDir
+//	dependsOn test
+//}
